small fixes: heading style + truncate error msg to 3-4 lines max

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -5,7 +5,7 @@ body {
 }
 
 h1 {
-  padding: 20px;
+  padding: 0 20px 20px;
   margin: 0;
   font-size: 50px;
   font-family: 'Shojumaru', cursive;
